--- a/notebook/static/tree/less/tree.less
+++ b/notebook/static/tree/less/tree.less
@@ -402,6 +402,10 @@ ul#new-menu {
     display: none;
 }
 
+.convert-download-button {
+    display: none;
+}
+
 .shutdown-button {
     display: none;
 }
